remove word by ID | raw word
