# internal/adapter/delivery/http/response/wrapper/word.go
@@ -6,3 +6,8 @@ type RetrievedWordWrapper struct {
 	Ok     bool                   `json:"ok" example:"true"`
 	Result response.RetrievedWord `json:"result"`
 }
+
+type DeletedWordWrapper struct {
+	Ok     bool                 `json:"ok" example:"true"`
+	Result response.DeletedWord `json:"result"`
+}
